# hidapi

./: .gitignore  CMakeLists.txt  bootstrap.sh
src/: CMakeLists.txt  main.cpp  pch.hpp
